# netwatch-intrusion-detection-system-using-ML

./: .gitignore  main.py  pyproject.toml
ml_pipeline/: evaluate.py  feature_selection.py  preprocess_unsw.py  train.py
notebooks/: exploration.ipynb
